@@ -1,8 +1,9 @@
-/*
+/** <title>UKPluginsRegistry</title>
+
 	UKPluginsRegistry.m
  
-	Plugins manager class used to register new plugins and obtain already
-    registered plugins
+	<abstract>Plugins manager class used to register new plugins and obtain 
+    already registered plugins</abstract>
  
 	Copyright (C) 2004 Uli Kusterer
  
@@ -41,19 +42,26 @@
 static NSFileManager *fm = nil;
 
 
-/**
-    Each plugin is represented by an NSMutableDictionary to which you can add your
-    own entries as needed. The keys UKPluginRegistry adds to this dictionary are:
-    
-    bundle      - NSBundle instance for this plugin.
-    identifier  - Unique identifier for this plugin (bundle identifier in current implementation)
-    image       - Icon (NSImage) of the plugin (for display in toolbars etc.)
-    name        - Display name of the plugin (for display in lists, toolbars etc.)
-    path        - Full path to the bundle.
-    class       - NSValue containing pointer to the principal class (type Class)
-                  for this bundle, so you can instantiate it.
-    instance    - If instantiate == YES, this contains an instance of the principal
-                  class, instantiated using alloc+init.
+/** UKPluginRegistry Description
+
+    <p>Each plugin is represented by an NSMutableDictionary to which you can 
+    add your own entries as needed. The keys UKPluginRegistry adds to this 
+    dictionary are:
+    <deflist>
+    <term>bundle</term><desc>NSBundle instance for this plugin.</desc>
+    <term>identifier</term><desc>Unique identifier for this plugin (bundle 
+    identifier in current implementation)</desc>
+    <term>image</term><desc>Icon (NSImage) of the plugin (for display in 
+    toolbars etc.)</desc>
+    <term>name</term><desc>Display name of the plugin (for display in lists, 
+    toolbars etc.)</desc>
+    <term>path</term><descFull path to the bundle.</desc>
+    <term>class</term><desc>NSValue containing pointer to the principal class 
+    (type Class) for this bundle, so you can instantiate it.</desc>
+    <term>instance</term><desc>If instantiate == YES, this contains an instance 
+    of the principal class, instantiated using alloc+init.</desc>
+    </deflist>
+    </p>
  */
 
 @implementation UKPluginsRegistry
@@ -122,8 +130,8 @@ static NSFileManager *fm = nil;
 #endif
 
 // FIXME: Implement UTI check support for type parameter.
-/** Locates and loads plugin bundles with extension <var>ext</var>. 
-    Normally this is the only method you need to call to load a plugin. */
+/** <p>Locates and loads plugin bundles with extension <var>ext</var>.</p>
+    <p>Normally this is the only method you need to call to load a plugin.</p> */
 - (void) loadPluginsOfType: (NSString *)ext
 {
 	NSBundle *bundle = [NSBundle mainBundle];
@@ -147,7 +155,7 @@ static NSFileManager *fm = nil;
 // FIXME: Implement UTI check support for type parameter.
 /** Finds plugins within <var>folder</folder> path which are identified by an 
     extension matching <var>ext</var>. Finally loads these plugins by calling 
-    <ref>-loadPluginAtPath:</ref>. */
+    -loadPluginAtPath:. */
 - (void) loadPluginsFromPath: (NSString *)folder ofType: (NSString *)ext
 {
 	NSDirectoryEnumerator *e = [fm enumeratorAtPath: folder];
@@ -219,12 +227,12 @@ static NSFileManager *fm = nil;
 #endif
 
 /** <p>Loads the plugin bundle located at <var>path</var>, checks it conforms to 
-    <strong>Plugin schema</strong> stored in the related bundle property list.
+    <em>Plugin schema</em> stored in the related bundle property list.
     </p>
     <p>Every property list values associated to Plugin schema are put in a
     dictionary which represents a plugin object; eventual validity errors
     may be reported each time a value is read in NSBundle description values
-    returned by <ref>-infoDictionary</ref>.</p> */
+    returned by -infoDictionary.</p> */
 - (NSMutableDictionary *) loadPluginForPath: (NSString *)path
 {
 	NSMutableDictionary *info = [pluginPaths objectForKey: path];
@@ -340,13 +348,13 @@ static NSFileManager *fm = nil;
 }
 
 /** <p>Returns <code>instantiate</code> value.</p> />
-    <p>Read <ref>-setInstantiate</ref> documentation to learn more.</p> */
+    <p>Read -setInstantiate: documentation to learn more.</p> */
 - (BOOL)  instantiate
 {
     return instantiate;
 }
 
-/** Sets <var>instantiate</var> value to <code>YES</code> if you want to have 
+/** Sets <var>instantiate</var> value to YESif you want to have 
     plugins main class automatically instantiated when they are loaded. */
 - (void) setInstantiate: (BOOL)n
 {
