@@ -1,5 +1,12 @@
 2006-02-14  Quentin Mathe <qmathe@club-internet.fr>
 
+    * Source/PKPluginsRegistry.m:
+    * Source/PKPrefPanesRegistry.m:
+    * Source/PKPrefsModulePrefPane.m:
+    Updated documentation markup (to work well with autogsdoc).
+
+2006-02-14  Quentin Mathe <qmathe@club-internet.fr>
+
     * Source/PKMatrixViewPresentation.m: Fixed wrong commit (this file was wrongly replaced by PKTableViewPresentation).
 
 2006-02-14  Quentin Mathe <qmathe@club-internet.fr>
